// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe mostrar el componente correctamente con el nombre del producto 1`] = `
<h1
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug sin imagen
  </span>
</h1>
`;

exports[`ProductTitle debe mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Coffee Mug
</span>
`;
